--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "formik": "^2.4.9",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
+    "nodemailer": "^8.0.1",
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.4.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
